# OpenPlatformFighter

./: .gitignore  Cargo.toml  wip_build.rs
animmacro/: Cargo.toml
animmacro/src/: lib.rs
src/: main.rs
src/common/: animation.rs  constants.rs  fighter.rs  frame.rs  mod.rs  stage.rs  state.rs  states.rs  stateticker.rs
src/driver/: controls.rs  player.rs
src/fighters/: mod.rs
src/fighters/circle/: mod.rs
src/fighters/test/: bones.anim  mod.rs
