[package]
name = "open_platform_fighter"
version = "0.1.0"
authors = ["ramsir3 <ramsir3@gmail.com>"]
# build = "build.rs"

[dependencies]
piston = "0.53.0"
piston2d-graphics = "0.41.0"
pistoncore-glutin_window = "0.69.0"
piston2d-opengl_graphics = "0.79.0"

enum-display-derive = "0.1.0"

bitflags = "1.3.2"

# [build-dependencies]
# inflections = "1.1.1"