[package]
name = "open_platform_fighter"
version = "0.1.0"
authors = ["ramsir3 <ramsir3@gmail.com>"]
edition = "2021"
# build = "build.rs"

[dependencies]
piston = "1.0.0"
piston2d-graphics = "0.45.0"
piston2d-opengl_graphics = "0.87.0"
piston_window = "0.132.0"
enum-display-derive = "0.1.1"
bitflags = "2.8.0"
pistoncore-glutin_window = "0.72.0"
gl = "0.14.0"
# [build-dependencies]
# inflections = "1.1.1"