[package]
name = "animmacro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
serde = { version = "1.0.132", features = ["derive"] }
# serde_derive = "1.0.132"
serde_json = "1.0.73"
# proc-macro2 = "1.0.36"